--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Год мира и созидания</title>
-    <link rel="icon" type="image/x-icon" href="/media/favicon.ico">
+    <link rel="icon" type="image/x-icon" href="/media/favicon.ico" />
     <link rel="stylesheet" href="./styles/zero.css" />
     <link rel="stylesheet" href="./styles/main.css" />
     <script src="./scripts/main.js" defer></script>
@@ -13,7 +13,7 @@
   <body>
     <div class="background"></div>
     <div class="backButton" id="backButton">
-        <a href="#header"><</a>
+      <a href="#header"><</a>
     </div>
     <div class="wrapper">
       <nav>
@@ -27,7 +27,13 @@
       <header id="header">
         <div class="content">
           <div class="title">
-            <h1>2023 год - Год мира и созидания</h1>
+            <h1>
+              <a
+                href="https://www.minpriroda.gov.by/ru/gne-ru/#:~:text=%D0%92%20%D1%86%D0%B5%D0%BB%D1%8F%D1%85%20%D0%BA%D0%BE%D0%BD%D1%81%D0%BE%D0%BB%D0%B8%D0%B4%D0%B0%D1%86%D0%B8%D0%B8%20%D0%B1%D0%B5%D0%BB%D0%BE%D1%80%D1%83%D1%81%D1%81%D0%BA%D0%BE%D0%B3%D0%BE%20%D0%BD%D0%B0%D1%80%D0%BE%D0%B4%D0%B0,%D0%BE%D1%82%201%20%D1%8F%D0%BD%D0%B2%D0%B0%D1%80%D1%8F%202023%20%D0%B3."
+                target="_blank"
+                >2023 год - Год мира и созидания</a
+              >
+            </h1>
             <p>
               В целях консолидации белорусского народа, укрепления в обществе
               идей мира и созидательного труда как главных условий развития
@@ -189,11 +195,17 @@
           </div>
           <div class="right">
             <ul>
-                <li><strong>Подготовил</strong></li>
-                <li><a href="https://github.com/SwiTsoLt">Смирнов С.А. Гр. 2К9392</a></li>
+              <li><strong>Подготовил</strong></li>
+              <li>
+                <a href="https://github.com/SwiTsoLt" target="_blank"
+                  >Смирнов С.А. Гр. 2К9392</a
+                >
+              </li>
             </ul>
           </div>
-          <small>© 2023 УО БГУИР Филиал «Минский радиотехнический колледж»</small>
+          <small
+            >© 2023 УО БГУИР Филиал «Минский радиотехнический колледж»</small
+          >
         </div>
       </footer>
     </div>
