--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
     <div class="wrapper">
       <nav>
         <div class="linkList">
-          <a href="#header">Начало</a>
+          <a href="#header">Главная</a>
           <a href="#s1">Планы и цели</a>
           <a href="#s2">Песня</a>
           <a href="#s3">Мероприятия</a>
@@ -120,10 +120,13 @@
                 любимой страны – свет, тепло и любовь. Пусть каждый ее житель
                 чувствует себя в полной и абсолютной безопасности! Спасибо всем,
                 кто обеспечивает нам эту безопасность.
-                <br /><br />
-                Сингл «Беларусы – людзi мiру» уже доступен на всех цифровых
-                музыкальных платформах.
                 <audio src="./media/music.m4a" controls></audio>
+                <span class="access">
+                  <marquee direction="left"
+                    >Сингл «Беларусы – людзi мiру» уже доступен на всех цифровых
+                    музыкальных платформах.</marquee
+                  >
+                </span>
               </p>
             </div>
           </div>
@@ -180,7 +183,7 @@
                 <strong>Карта сайта</strong>
               </li>
               <li>
-                <a href="#header">Начало</a>
+                <a href="#header">Главная</a>
               </li>
               <li>
                 <a href="#s1">Планы и цели</a>
