--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
   <body>
     <div class="background"></div>
     <div class="backButton" id="backButton">
-      <a href="#header"><</a>
+      <a href="#header"></a>
     </div>
     <div class="wrapper">
       <nav>
